--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -44,7 +44,7 @@ $(function(){
 		loginUrl:"/sys/port/login_dialog.do", loginTitle:"登录",	// 弹出登录对话框
 //		loginUrl:"login.html",	// 跳到登录页面
 		statusCode:{ok:200, error:300, timeout:301}, //【可选】
-		pageInfo:{pageNum:"pageNum", numPerPage:"numPerPage", orderField:"orderField", orderDirection:"orderDirection"}, //【可选】
+		pageInfo:{pageNum:"pageInfo.page", numPerPage:"pageInfo.limit", orderField:"orderField", orderDirection:"orderDirection"}, //【可选】
 		keys: {statusCode:"statusCode", message:"message"}, //【可选】
 		ui:{hideMode:'offsets'}, //【可选】hideMode:navTab组件切换的隐藏方式，支持的值有’display’，’offsets’负数偏移位置的值，默认值为’display’
 		debug:false,	// 调试模式 【true|false】
@@ -113,7 +113,7 @@ $(function(){
 							<li><a href="tabsPage.html" target="navTab">主框架面板</a>
 								<ul>
 									<li><a href="/main.do" target="navTab" rel="main">我的主页</a></li>
-									<li><a href="/sys/user/list.do" target="navTab" rel="row-col">用户管理</a></li>
+									<li><a href="/sys/user/list.do" target="navTab" rel="user-mgr">用户管理</a></li>
 									
 								</ul>
 							</li>
