添加shiro测试功能

--- a/src/main/webapp/WEB-INF/views/sys/user_list.html
+++ b/src/main/webapp/WEB-INF/views/sys/user_list.html
@@ -1,6 +1,6 @@
 <form id="pagerForm" method="post" action="/sys/user/list.do">
-	<input type="hidden" name="pageInfo.page" value="${(dataListPager.page)!0}" />
-	<input type="hidden" name="pageInfo.limit" value="${(dataListPager.limit)!0}" />
+	<input type="hidden" name="pageInfo.page" value="${(dataList.page)!0}" />
+	<input type="hidden" name="pageInfo.limit" value="${(dataList.limit)!0}" />
 	<input type="hidden" name="orderField" value="" />
 	
 	<input type="hidden" name="queryParam['startDate']" value="2017-04-16" />
